--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,16 @@ package-lock.json
 
 # 环境变量
 .env
+.env.local
+.env.*.local
 
 # 日志
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
 # 数据文件
 data/files.json
@@ -19,7 +25,13 @@ uploads/
 
 # 操作系统
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
 # 编辑器
 .vscode/
@@ -27,15 +39,31 @@ Thumbs.db
 *.swp
 *.swo
 *~
+*.sublime-project
+*.sublime-workspace
 
 # 临时文件
 tmp/
 temp/
 *.tmp
+.cache/
 
 # 测试覆盖率
 coverage/
+.nyc_output/
 
 # 构建产物
 dist/
 build/
+out/
+
+# 调试
+*.pid
+*.seed
+*.pid.lock
+
+# 可选的 npm 缓存目录
+.npm
+
+# 可选的 eslint 缓存
+.eslintcache
